fix width issue on iOS devices

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -15,6 +15,7 @@ body {
   margin: 0;
   background-color: #202020;
   width: 100vw;
+  min-height: -webkit-fill-available;
 }
 
 *,
