--- a/assets/styles/utils.scss
+++ b/assets/styles/utils.scss
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.vw-100 {
+  max-width: 100vw;
+}
+
 .h-100 {
   height: 100%;
 }
